gitops/apps/foodops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodops-app
  labels:
    app: foodops-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: foodops-app
  template:
    metadata:
      labels:
        app: foodops-app
    spec:
      terminationGracePeriodSeconds: 300
      containers:
      - name: foodops-app
        image: 843998948464.dkr.ecr.us-east-1.amazonaws.com/foodops:1
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
