gitops/apps/foodops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodops-app
  labels:
    app: foodops-app
spec:
  type: LoadBalancer   
  ports:
  - port: 80           # External port
    targetPort: 3000   # Container's port
  selector:
    app: foodops-app
